--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,7 +10,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "1.0.0-pre.6",
     "com.unity.xr.oculus": "1.9.1",
-    "com.unity.xr.openxr": "1.2.8",
+    "com.varjo.xr": "https://github.com/varjocom/VarjoUnityXRPlugin.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
